--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,25 +1,59 @@
+/* Card.module.css */
+
 .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .image {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    border-radius: 5px;
-    margin-bottom: 10px;
-  }
-  
-  h3 {
-    font-size: 18px;
-    font-weight: bold;
-    color: #333;
-    text-align: center;
-  }
-  
+  background-color: #e50f0f;
+  border: #888 solid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 20px;
+  text-align: center;
+  width: 100%; 
+  max-width: 500px; 
+  margin: 20px; 
+}
+
+.image {
+  border-radius: 8px;
+  margin-bottom: 10px; 
+  width: 100%; 
+  height: 500px; 
+  object-fit: cover;
+}
+
+.title {
+  font-size: 20px; 
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.rating {
+  font-size: 16px; 
+  color: #888;
+  margin-bottom: 2px; 
+}
+
+.releaseDate {
+  font-size: 14px; 
+  color: #888;
+  margin-bottom: 2px; 
+}
+
+.description {
+  font-size: 14px; 
+  line-height: 1.4; 
+  margin-bottom: 8px; 
+  max-height: 120px; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+}
+
+.genres {
+  font-size: 14px; 
+  line-height: 1.4; 
+}
+
+.genres p {
+  margin-bottom: 2px; 
+}
