--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -1,6 +1,8 @@
 .container {
     padding: 20px;
     background-color: #fff;
+    background-image: url(https://img.freepik.com/premium-photo/neon-dot-matrix-background-with-vibrant-mint-green-magenta-ai-generative_87646-14135.jpg?w=360);
+
   }
   
   .title {
