--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -9,16 +9,18 @@
   gap: 10px;
   padding: 20px;
   text-align: center;
-  width: 100%; 
-  max-width: 500px; 
-  margin: 20px; 
+  width: 90%; 
+  max-width: 400px; 
+  margin: 20px;
+  max-height: auto;
+ 
 }
 
 .image {
   border-radius: 8px;
-  margin-bottom: 10px; 
+  margin-bottom: 2px; 
   width: 100%; 
-  height: 500px; 
+  height: 200px; 
   object-fit: cover;
 }
 
@@ -41,13 +43,14 @@
 }
 
 .description {
-  font-size: 14px; 
-  line-height: 1.4; 
-  margin-bottom: 8px; 
-  max-height: 120px; 
-  overflow: hidden; 
-  text-overflow: ellipsis; 
+  font-size: 14px;
+  line-height: 1.4;
+  margin-bottom: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
 }
+
 
 .genres {
   font-size: 14px; 
