--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,62 +1,77 @@
 /* Card.module.css */
 
 .card {
-  background-color: #e50f0f;
-  border: #888 solid;
+  border: 6px solid #fff;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
-  width: 90%; 
-  max-width: 400px; 
+  width: 90%;
+  max-width: 400px;
   margin: 20px;
   max-height: auto;
- 
+  transition: transform 0.3s, box-shadow 0.3s;
+  background: linear-gradient(45deg, #2b2b2b, #1a1a1a);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .image {
   border-radius: 8px;
-  margin-bottom: 2px; 
-  width: 100%; 
-  height: 200px; 
+  margin-bottom: 2px;
+  width: 100%;
+  height: 200px;
   object-fit: cover;
 }
 
 .title {
-  font-size: 20px; 
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 4px;
+  color: #fff;
 }
 
 .rating {
-  font-size: 16px; 
-  color: #888;
-  margin-bottom: 2px; 
+  font-size: 16px;
+  margin-bottom: 2px;
 }
-
-.releaseDate {
-  font-size: 14px; 
-  color: #888;
-  margin-bottom: 2px; 
-}
-
-.description {
-  font-size: 14px;
-  line-height: 1.4;
-  margin-bottom: 8px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-}
-
 
 .genres {
-  font-size: 14px; 
-  line-height: 1.4; 
+  font-size: 14px;
+  line-height: 1.4;
+  color: #fff;
 }
 
 .genres p {
-  margin-bottom: 2px; 
+  margin-bottom: 2px;
+}
+
+.card:hover .title {
+  color: #e50f0f;
+}
+
+.card:hover .genres {
+  color: #e50f0f;
+}
+
+.bronze {
+  background: linear-gradient(45deg, #633f17, #4a2e10);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3), 0 0 8px rgba(238, 201, 0, 0.5);
+}
+
+.silver {
+  background: linear-gradient(45deg, #919191, #666666);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3), 0 0 8px rgba(192, 192, 192, 0.5);
+}
+
+.gold {
+  background: linear-gradient(45deg, #ffd700, #e3c600);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3), 0 0 8px rgba(255, 215, 0, 0.5);
 }
