--- a/client/src/components/CardsContainer/CardsContainer.module.css
+++ b/client/src/components/CardsContainer/CardsContainer.module.css
@@ -2,25 +2,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh; 
+  background-color: rgba(245, 245, 245, 0.8);
+  padding-bottom: 20px; 
+  padding-right: 26px;
 }
 
 .filters {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
 }
-.labelgenre{
-  color: #ffffff;
-}
-.labelorder{
-  color: #ffffff;
-}
+
 .filter,
-.order {
-  margin-right: 10px;
+.filterplatform,
+.order,
+.rating {
+  display: flex;
+  align-items: center;
+  margin: 0 10px;
 }
-.ranking{
-  margin-right: 10px;
+
+.labelgenre,
+.labelplatform,
+.labelorder {
+  margin-right: 5px;
+}
+
+.select {
+  padding: 5px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
 
 .cards {
@@ -28,17 +41,9 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
 }
-.loadingContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-  font-size: 40px;
-  background-color: #ff0000;
-  color: #ffffff;
+
+.noGames {
+  text-align: center;
   font-weight: bold;
-  text-transform: uppercase;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
 }
