--- a/client/src/components/CardsContainer/CardsContainer.module.css
+++ b/client/src/components/CardsContainer/CardsContainer.module.css
@@ -3,14 +3,23 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh; 
-  background-color: rgba(245, 245, 245, 0.8);
+
   padding-bottom: 20px; 
   padding-right: 26px;
 }
 
 .filters {
+  border-radius: 8px;
+ 
+  padding: 10px;
+  margin-left: 20px;
+  margin-right: 10px;
   display: flex;
-  justify-content: center;
+  
+  background-color: #86312e; 
+  background-image: linear-gradient(45deg, #fd591a 22%, transparent 90%);
+  
+  justify-content: space-evenly;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -19,6 +28,7 @@
 .filterplatform,
 .order,
 .rating {
+  gap:2px;
   display: flex;
   align-items: center;
   margin: 0 10px;
@@ -35,15 +45,83 @@
   border-radius: 4px;
   border: 1px solid #ccc;
 }
+.labelorder{
+  background-color: none;
+}
 
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
 }
+.pagination{
+  margin: 10px;
+}
+
+.pagination button{
+  margin:20px;
+  font-family: Electrolize;
+  font-size: 16px;
+  margin-top: 1px;
+  font-weight: bold;
+  padding: 8px 16px;
+  background-color: #ff7d1f;
+  color: #000000;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+}
+.pagination button:disabled {
+  background-color: #cccccc; 
+  color: #999999; 
+  cursor: not-allowed; 
+}
+.pagination button:active {
+  background-color: #ff7d1f; /* Cambia el color de fondo cuando se presiona */
+  transform: scale(0.95); /* Aplica una escala ligeramente más pequeña */
+}
+.pagination span{
+  background-color:rgba(255, 255, 255, 0.555)
+}
+
+
+
+
 
 .noGames {
   text-align: center;
   font-weight: bold;
   margin-top: 20px;
+}
+
+
+.loadercontainer {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.834);
+  z-index: 1;
+}
+
+.spinner {
+  width: 64px;
+  height: 64px;
+  border: 8px solid;
+  border-color: #3d5af1 transparent #3d5af1 transparent;
+  border-radius: 50%;
+  animation: spin-anim 1.2s linear infinite;
+}
+
+@keyframes spin-anim {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
 }
