--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,52 +1,63 @@
-/* Card.module.css */
-
 .card {
-  border: 6px solid #fff;
-  border-radius: 5px;
+  border: 3px solid;
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  padding: 10px;
+  padding: 1px;
   text-align: center;
   width: 90%;
-  max-width: 400px;
+  max-width: 300px;
   margin: 20px;
   max-height: auto;
   transition: transform 0.3s, box-shadow 0.3s;
-  background: linear-gradient(45deg, #2b2b2b, #1a1a1a);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 4px rgba(216, 204, 204, 0.3);
+  background-image: url('https://images.unsplash.com/photo-1592659762303-90081d34b277?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cGNifGVufDB8fDB8fHww&w=1000&q=80');
+  background-size: cover;
+  
+
 }
 
 .card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  transform: translateY(-15px);
+  box-shadow: 0 5px 19px rgb(254, 253, 253);
 }
 
 .image {
   border-radius: 8px;
-  margin-bottom: 2px;
+  margin-bottom: 1px;
   width: 100%;
-  height: 200px;
+  height: 190px;
   object-fit: cover;
 }
 
 .title {
+  font-family: Electrolize;
+    font-weight: bold;
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 4px;
-  color: #fff;
+  color: #fff; /* Texto en color blanco */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); /* Sombra al texto del título */
 }
 
 .rating {
+  font-family: Electrolize;
+    font-weight: bold;
   font-size: 16px;
   margin-bottom: 2px;
+  color: #fff; /* Texto en color blanco */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); /* Sombra al texto de la calificación */
 }
 
 .genres {
+  font-family: Electrolize;
+    font-weight: bold;
   font-size: 14px;
   line-height: 1.4;
-  color: #fff;
+  color: #fff; /* Texto en color blanco */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); /* Sombra al texto de los géneros */
 }
 
 .genres p {
@@ -54,24 +65,9 @@
 }
 
 .card:hover .title {
-  color: #e50f0f;
+  color: #afb0b5; /* Cambia el color del texto del título al hacer hover */
 }
 
 .card:hover .genres {
-  color: #e50f0f;
-}
-
-.bronze {
-  background: linear-gradient(45deg, #633f17, #4a2e10);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3), 0 0 8px rgba(238, 201, 0, 0.5);
-}
-
-.silver {
-  background: linear-gradient(45deg, #919191, #666666);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3), 0 0 8px rgba(192, 192, 192, 0.5);
-}
-
-.gold {
-  background: linear-gradient(45deg, #ffd700, #e3c600);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3), 0 0 8px rgba(255, 215, 0, 0.5);
+  color: #afb0b5; /* Cambia el color del texto de los géneros al hacer hover */
 }
