--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,19 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');
 .container {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: #f2f2f2;
-  }
-  
-  .link {
-    padding: 5px 10px;
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-  }
-  
-  .link:hover {
-    background-color: #ccc;
-    border-radius: 5px;
-  }
-  
+  z-index: 1;
+  font-family: electrolize;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #05204b; /* Color base dorado */
+  background-image: linear-gradient(45deg, #005091 22%, transparent 90%); /* Agregar brillo */
+position: fixed;
+width: 99%;
+  align-items: center; /* Color de fondo de la barra de navegación */
+}
+.search{
+  margin-top: 4px;
+}
+.link {
+  font-family: Electrolize;
+  font-size: 16px;
+  margin-top: 1px;
+  font-weight: bold;
+  padding: 8px 16px;
+  background-color: #ff7d1f;
+  color: #000000;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+.search{
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #fff; /* Color del texto de los enlaces */
+  font-weight: bold;
+
+  border-radius: 5px;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.link:hover {
+  background-color: #ff5722; /* Cambia el color de fondo cuando se presiona */
+ /* Efecto de levantamiento */
+}
+
+.link:active {
+  background-color: #ff5722; /* Cambia el color de fondo cuando se presiona */
+  transform: scale(0.95); /* Efecto de hundimiento */
+}
