--- a/client/src/views/Landing/Landing.module.css
+++ b/client/src/views/Landing/Landing.module.css
@@ -5,29 +5,33 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #f2f2f2;
+    background-image: url('https://singularityhub.com/wp-content/uploads/2018/10/concept-circuit-board-blue-orange-shutterstock_703395397.jpg');
   }
   
   .title {
+    font-family: Electrolize;
     font-size: 32px;
     font-weight: bold;
-    color: #333;
+    color: white;
     margin-bottom: 20px;
   }
   
   .subtitle {
     font-size: 18px;
-    color: #666;
+    color: black;
   }
   
   .link {
+    font-family: Electrolize;
+    font-weight: bold;
+    font-size: 25px;
     padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
+    background-color: #ff7d1f;
+    color: black;
     border: none;
     border-radius: 5px;
     text-decoration: none;
-    font-size: 16px;
+    
     margin-top: 20px;
   }
   
