--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -23,7 +23,30 @@
   transform: translateY(-15px);
   box-shadow: 0 5px 19px rgb(254, 253, 253);
 }
+.button {
+  
+  justify-content: end;
+  font-family: Electrolize;
+  font-size: 16px;
+  margin-top: 1px;
+  font-weight: bold;
+  padding: 4px 9px;
+  background-color: #ff7d1f;
+  color: #000000;
+  border: solid;
+  border-radius: 88px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+}
 
+.button:hover {
+  background-color: #ff5722;
+}
+
+.button:active {
+  transform: scale(0.95);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+}
 .image {
   border-radius: 8px;
   margin-bottom: 1px;
