--- a/client/src/components/CardsContainer/CardsContainer.module.css
+++ b/client/src/components/CardsContainer/CardsContainer.module.css
@@ -28,6 +28,7 @@
 .filterplatform,
 .order,
 .rating {
+  
   gap:2px;
   display: flex;
   align-items: center;
@@ -59,9 +60,10 @@
 }
 
 .pagination button{
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
   margin:20px;
   font-family: Electrolize;
-  font-size: 16px;
+  font-size: 21px;
   margin-top: 1px;
   font-weight: bold;
   padding: 8px 16px;
@@ -79,11 +81,15 @@
   cursor: not-allowed; 
 }
 .pagination button:active {
-  background-color: #ff7d1f; /* Cambia el color de fondo cuando se presiona */
-  transform: scale(0.95); /* Aplica una escala ligeramente más pequeña */
+  background-color: #ff7d1f; 
+  transform: scale(0.95);
 }
 .pagination span{
-  background-color:rgba(255, 255, 255, 0.555)
+ font-family: Electrolize;
+ color: white;
+ font-weight: bold;
+ text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.95);
+ 
 }
 
 
@@ -100,15 +106,16 @@
 .loadercontainer {
   width: 100%;
   height: 100vh;
-  display: flex;
+  display:contents;
   justify-content: center;
   align-items: center;
   position: fixed;
-  background: rgba(0, 0, 0, 0.834);
+  
   z-index: 1;
 }
 
 .spinner {
+ 
   width: 64px;
   height: 64px;
   border: 8px solid;
@@ -125,3 +132,39 @@
       transform: rotate(360deg);
   }
 }
+.pagination2{
+  margin: 10px;
+}
+
+.pagination2 button{
+  margin:20px;
+  font-family: Electrolize;
+  font-size: 21px;
+  margin-top: 1px;
+  font-weight: bold;
+  padding: 8px 16px;
+  background-color: #ff7d1f;
+  color: #000000;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
+}
+.pagination2 button:disabled {
+  background-color: #cccccc; 
+  color: #999999; 
+  cursor: not-allowed; 
+}
+.pagination2 button:active {
+  background-color: #ff7d1f; 
+  transform: scale(0.95); 
+  
+}
+.pagination2 span{
+  font-family: Electrolize;
+  color: white;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.95); 
+  
+ }
