--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');
 .container {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
   z-index: 1;
   font-family: electrolize;
   padding: 20px;
@@ -13,8 +14,20 @@ width: 99%;
   align-items: center; /* Color de fondo de la barra de navegación */
 }
 .search{
+  
   margin-top: 4px;
 }
+.tittle{
+  
+  flex: 1; 
+  font-size: 22px;
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+
+}
+
 .link {
   font-family: Electrolize;
   font-size: 16px;
