--- a/client/src/views/CreateVideogame/CreateVideogame.module.css
+++ b/client/src/views/CreateVideogame/CreateVideogame.module.css
@@ -70,7 +70,7 @@
   }
   
   .button {
-    
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
     margin: 10px;
     margin-top: 15%;
     align-self:flex-start;
@@ -87,6 +87,19 @@
     
     border-radius: 5px;
     cursor: pointer;
+  }
+  .button :active{
+    transform: scale(0.95);
+    font-family: electrolize;
+    font-size: 20px;
+    padding: 10px 20px;
+    background-color: #ff7d1f;
+    color: black;
+    font-weight: bold;
+    border: 1.6px solid black;
+    
+    border-radius: 5px;
+    cursor: pointer
   }
   .button :disabled{
     font-family: electrolize;
