--- a/client/src/components/CardsContainer/CardsContainer.module.css
+++ b/client/src/components/CardsContainer/CardsContainer.module.css
@@ -42,9 +42,13 @@
 }
 
 .select {
+  font-family: Electrolize;
   padding: 5px;
   border-radius: 4px;
   border: 1px solid #ccc;
+}
+.select option{
+  font-family: Electrolize;
 }
 .labelorder{
   background-color: none;
