--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -95,8 +95,10 @@
 
 
 .loadercontainer {
+  z-index: -2;
   width: 100%;
   height: 100vh;
+  margin-top: 56px;
   display: flex;
   justify-content: center;
   align-items: center;
